--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 			</nav>
 		</div>
 		<div class="content">
-			<p>We are a creative agency that focuses on human-centric design and ergonomic workplace innovations.</p>
+			<p>Stop overthinking, you can't control everything<a>https://vicflow.github.io/anexo/</a></p>
 		</div>
 		<button class="enter">
 			<div class="enter__bg"></div>
