--- a/index2.html
+++ b/index2.html
@@ -59,7 +59,8 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 			</nav>
 		</div>
 		<div class="content">
-			<p>We are a creative agency that focuses on human-centric design and ergonomic workplace innovations.</p>
+			<p><a href="https://vicflow.github.io/anexo/"
+			Stop overthinking, you cant control everything.></a></p>
 		</div>
 		<button class="enter">
 			<div class="enter__bg"></div>
