--- a/index2.html
+++ b/index2.html
@@ -59,8 +59,8 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 			</nav>
 		</div>
 		<div class="content">
-			<p><a href="https://vicflow.github.io/anexo/"
-			Stop overthinking, you cant control everything.></a></p>
+			<p><a href="https://vicflow.github.io/anexo/"></a>
+			Stop overthinking, you cant control everything.</a></p>
 		</div>
 		<button class="enter">
 			<div class="enter__bg"></div>
