--- a/index2.html
+++ b/index2.html
@@ -42,7 +42,7 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 				<textPath class="circles__text-path" xlink:href="#circle-3" aria-label="" textLength="1341">y si o talvez si o quizás si</textPath>
 			</text>
 			<text class="circles__text circles__text--4">
-				<textPath class="circles__text-path" xlink:href="#circle-4" aria-label="" textLength="836">Depth over distance was all I asked of you&nbsp;</textPath>
+				<textPath class="circles__text-path" xlink:href="#circle-4" aria-label="" textLength="836">millones de ideas una tras otra;</textPath>
 			</text>
 		</svg>
 		<div class="frame">
@@ -59,8 +59,8 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 			</nav>
 		</div>
 		<div class="content">
-			<p><a href="https://vicflow.github.io/anexo/"></a>
-			Stop overthinking, you cant control everything.</a></p>
+			<a href="https://vicflow.github.io/anexo/">
+			Stop overthinking, you can't control everything.</a>
 		</div>
 		<button class="enter">
 			<div class="enter__bg"></div>
