--- a/index2.html
+++ b/index2.html
@@ -36,17 +36,17 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 				<textPath class="circles__text-path" xlink:href="#circle-1" aria-label="" textLength="2830">pienso pienso pienso pienso y pienso</textPath>
 			</text>
 			<text class="circles__text circles__text--2">
-				<textPath class="circles__text-path" xlink:href="#circle-2" aria-label="" textLength="2001">día tras día tras día tras día</textPath>
+				<textPath class="circles__text-path" xlink:href="#circle-2" aria-label="" textLength="2001">pienso pienso pienso pienso</textPath>
 			</text>
 			<text class="circles__text circles__text--3">
-				<textPath class="circles__text-path" xlink:href="#circle-3" aria-label="" textLength="1341">y si o talvez si o quizás si</textPath>
+				<textPath class="circles__text-path" xlink:href="#circle-3" aria-label="" textLength="1341">pienso pienso pienso</textPath>
 			</text>
 			<text class="circles__text circles__text--4">
-				<textPath class="circles__text-path" xlink:href="#circle-4" aria-label="" textLength="836">millones de ideas una tras otra;</textPath>
+				<textPath class="circles__text-path" xlink:href="#circle-4" aria-label="" textLength="836">pienso pienso pienso pienso</textPath>
 			</text>
 		</svg>
 		<div class="frame">
-			<h1 class="frame__title">Circular Text Effect</h1>
+			<h1 class="frame__title">overthinking</h1>
 			<nav class="frame__links">
 				<a href="http://tympanus.net/Tutorials/InfiniteCircularGallery/">Previous demo</a>
 				<a href="https://tympanus.net/codrops/?p=53487">Article</a>
@@ -64,7 +64,7 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 		</div>
 		<button class="enter">
 			<div class="enter__bg"></div>
-			<span class="enter__text">Enter</span>
+			<span class="enter__text">Libérate</span>
 		</button>
 	</main>
 	<script src="demo2.44794d1a.js"></script>
