cambios-eliminar-extras

--- a/index2.html
+++ b/index2.html
@@ -46,16 +46,12 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 			</text>
 		</svg>
 		<div class="frame">
-			<h1 class="frame__title">overthinking</h1>
+			<h1 class="frame__title"></h1>
 			<nav class="frame__links">
-				<a href="http://tympanus.net/Tutorials/InfiniteCircularGallery/">Previous demo</a>
-				<a href="https://tympanus.net/codrops/?p=53487">Article</a>
-				<a href="https://github.com/codrops/CircularTextEffect/">GitHub</a>
+				
 			</nav>
 			<nav class="frame__demos">
-				<a href="index.html" class="frame__demo">demo 1</a>
-				<a href="index2.html" class="frame__demo frame__demo--current">demo 2</a>
-				<a href="index3.html" class="frame__demo">demo 3</a>
+				
 			</nav>
 		</div>
 		<div class="content">
